[package]
name = "session-miner"
version = "0.1.0"
edition = "2024"
description = "Mine OpenClaw session transcripts for behavioral patterns and automation recommendations"
license = "MIT"
repository = "https://github.com/SuperInstance/session-miner"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"

[lib]
name = "session_miner"
path = "src/lib.rs"

[[bin]]
name = "session-miner"
path = "src/main.rs"
